# ElegantClipboard

./: CLAUDE.md  FEATURES.md  FEATURES_EN.md  README.md  README_EN.md  index.html  package-lock.json  package.json
public/: image-preview.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: game_mode.rs  hotkey.rs  input_monitor.rs  lib.rs  low_level_shortcut.rs  positioning.rs  webdav.rs
src-tauri/src/clipboard/: dedup.rs  handler.rs  mod.rs  monitor.rs  source_app.rs
src-tauri/src/commands/: clipboard.rs  data_transfer.rs  file_ops.rs  groups.rs  mod.rs  ocr.rs  preview.rs  settings.rs  sync.rs  tags.rs  translate.rs  tts.rs  window.rs
src-tauri/src/database/: mod.rs  repository.rs  schema.rs
src-tauri/src/database/repos/: mod.rs  settings.rs  sync_dto.rs  tag.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/webdav/: mod.rs
src/components/: CardContentRenderers.tsx  CardSubComponents.tsx  ClipboardContextMenu.tsx  ClipboardItemCard.tsx  ClipboardList.tsx  ErrorBoundary.tsx  FileIconLayout.tsx  HighlightText.tsx  ScrollToTopButton.tsx  TagsView.tsx  TranslationResult.tsx  TtsButton.tsx  TtsHighlightText.tsx  VideoCard.tsx
src/components/ClipboardList/: EmptyStates.tsx  VirtualizedList.tsx
src/components/clipboard/: TagPopover.tsx
src/components/settings/: AppFilterTab.tsx  DataTab.tsx  DisplayTab.tsx  GeneralTab.tsx  OcrTab.tsx  ShortcutsTab.tsx  SyncTab.tsx  ThemeTab.tsx  TranslateTab.tsx  TtsTab.tsx
src/components/settings/sync/: AutoSyncSection.tsx  ConnectionSection.tsx  ManualSyncSection.tsx  SyncTypesSection.tsx
src/components/tags/: TagItemRows.tsx
src/hooks/: useClipboardKeyNav.ts  useImagePreview.ts  useOptimisticReorder.ts  useScrollToTopState.ts  useSearchDebounce.ts  useTextHoverPreview.ts  useTextPreview.ts  useVideoPreview.ts  useWebDAVActions.ts  useWebDAVSettings.ts  useWindowLifecycle.ts
src/lib/: constants.ts  file-check-cache.ts  format.ts  ocr.ts  tag-loader.ts  translate.ts  tts.ts
src/pages/: OcrResult.tsx  OcrScreenshot.tsx  Settings.tsx  TextEditor.tsx  TranslateResult.tsx
src/stores/: clipboard.ts  ocr-settings.ts  tags.ts  translate-settings.ts  tts-playback.ts  tts-settings.ts  ui-settings.ts
